2010-01-02 Karsten Wiese <fzuuzf@googlemail.com>
	* template <typename tn> class PolyArr;
	Replace simple [MAXPOLY] arrays by it to ensure initialization.

2010-01-01 Karsten Wiese <fzuuzf@googlemail.com>
	* src/synthdata.cpp: Add SND_SEQ_EVENT_SENSING (42) to the list
	of ignored MIDI event types.
	* src/modularsynth.cpp: Add test code for ALSA MIDI event type
	filtering. Didn't work, commented it out. Committed it nonetheless
	so I don't try this again without knowing what I already tried.

2009-12-29 Guido Scholz <guido.scholz@bayernline.de>
	* src/mainwindow.cpp: Handler for SIGUSR1 added to save
	currently opened patch file. This enables LADI session handling
	on application level 1.

2009-12-28 Guido Scholz <guido.scholz@bayernline.de>
	* src/main.cpp, src/mainwindow.cpp, src/synthdata.cpp: Fixed
	compiler warnings caused by usage of string literals without
	format parameters in qWarning(), appears with Qt 4.5.
	* src/mainwindow.cpp: Compiler warning about ignored write()
	result fixed.
	* src/m_wavout.cpp: Compiler warning about ignored getcwd()
	result fixed.


+++ Release 2.0.1 (2009-12-26) +++

2009-12-25 Karsten Wiese <fzuuzf@googlemail.com>
	* src/m_env.cpp: Initialize M_env::e_noteOff[].

2009-10-07 Guido Scholz <guido.scholz@bayernline.de>
	* src/midiwidget.cpp: MIDI channel numbering changed from 0..15
	to 1..16.

2009-10-04 Karsten Wiese <fzuuzf@googlemail.com>
	* src/midiwidget.cpp: Fix crash unbinding multiple controllables
	connected to the same midi controller by using QPersistentModelIndex.

2009-09-26 Karsten Wiese <fzuuzf@googlemail.com>
	* src/midiwidget.cpp: Update comments, move one return.
	* SynthData::getMidiControllerContext(): Tell userinterface
	"MIDI event happened", if (midiWidget->isVisible()).

2009-08-14 Guido Scholz <guido.scholz@bayernline.de>
	* src/midiwidget.cpp: Update selection in MIDI controller view,
	if MIDI event of an already listed controller arrives.

2009-09-05 Frank Neumann <beachnase@web.de>