@@ -1,3 +1,11 @@
+2010-01-03 Karsten Wiese <fzuuzf@googlemail.com>
+	* src/m_dynamicwaves.*, src/m_vcf.*:
+	Replace 2D [MAXPOLY] arrays by PolyArr<> to ensure initialization.
+	* src/m_vcf.cpp: Initialize vcfType to let the vcf start with a defined
+	filtertype.
+	Ensure initBuf() is called before running different filtertype.
+	Prevents click on filtertype switching.
+	
 2010-01-02 Karsten Wiese <fzuuzf@googlemail.com>
 	* template <typename tn> class PolyArr;
 	Replace simple [MAXPOLY] arrays by it to ensure initialization.
